--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-scripts": "0.9.5"
   },
   "scripts": {
-    "serve": "nodemon server/server.js",
+    "start": "server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
