--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "superagent": "^3.5.2",
-    "webpack": "^2.6.1"
+    "webpack": "^2.6.1",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
     "babel-preset-react-hmre": "^1.1.1",
@@ -25,9 +26,9 @@
     "react-scripts": "0.9.5"
   },
   "scripts": {
-    "serve": "nodemon server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js --progress"
   }
 }
