--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "style-loader": "^0.18.2",
     "superagent": "^3.5.2",
     "webpack": "^2.6.1",
+    "webpack-dev-middleware": "^1.11.0",
     "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
